2005-12-06  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_destroy):
	initialize all fields of the struct passed to gimp_set_data().

2005-12-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/edge.c: corrected the algorithm name as
	suggested in bug #323304.

2005-12-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/iwarp.c: applied a modified version of a patch
	by Joao S. O. Bueno Calligaris that makes the IWarp preview
	resizable (bug #323177).

2005-12-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mkgen.pl
	* plug-ins/faxg3/Makefile.am
	* plug-ins/help/Makefile.am
	* plug-ins/metadata/Makefile.am: workaround for libtool brokeness
	on Linux (bug #314513 and bug #323085)

	* plug-ins/common/Makefile.am: regenerated.

2005-12-02  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): added
	"-v" to the wget command-line options. Fixes bug #322977.

2005-11-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): timeout
	message format string should use %d, not %s.

2005-11-30  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/screenshot.c: can't use gtk_main_quit as a
	timeout function, since it doesn't return a value. Wrap it in a
	function that returns FALSE instead. Fixes bug #322343.

2005-11-28  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c: handle fixed_width,
	fixed_height, and fixed_aspect in a reasonable way.
	Also don't crash when user modifies aspect of a 
	nonexistent rectangle, and disconnect notify 
	handler in dispose.
	
2005-11-30  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpeditor.c (gimp_editor_add_button)
	(gimp_editor_add_action_button): set the "use-stock" property on
	the created buttons so changes of the underlying action's name
	don't change the button's icon to a string.

2005-11-28  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
